# almanac-core

./: .gitignore  Makefile  PROOF_CHAIN.md  README.md  pyproject.toml
demo/: privacy_receipt_demo.py
fixtures/: broker_responses.json  broker_scan_report.json
schemas/: broker_response.v1.json  deletion_request.v1.json  reappearance.v1.json  record_discovery.v1.json  verification.v1.json
src/: crypto.py  crypto_v2.py  receipts.py  safety.py  structure_key.py  vault.py
tests/: test_crypto.py  test_crypto_v2.py  test_receipts.py  test_safety.py  test_vault_v2.py  test_vault_v37.py
