[project]
name = "almanac-core"
version = "0.1.0"
description = "Open infrastructure for personal data-rights receipts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
